tests/NormalTests/paczka1/fuzzy1/95714943.err
Error in line 3: z9dXWMgbWwW S246 82,8
Error in line 15: gkNEKI S190 92,0
Error in line 13: EgZ S246 377,5
Error in line 8: iTUUIJevREB S376 73,4
Error in line 25: S348 S246 84,4
